k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: harness-cis
  labels:
    name: harness-cis
